# torch-distributed-ensemble

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/00_heteroscedastic_regression/: README.md  main.py
examples/01_joint_early_stopping/: README.md  main.py
examples/01_joint_early_stopping/outputs/: metrics.csv
examples/02_coupled_ssl/: README.md  main.py
examples/02_coupled_ssl/outputs/: coupled_history.json  uncoupled_history.json
examples/03_hpo_ensemble/: README.md  plot.py  train.py
examples/03_hpo_ensemble/conf/: config.yaml
examples/03_hpo_ensemble/outputs/: fine_grid.jsonl  results_wine_all_ensemble_3seeds.jsonl  results_wine_all_member_3seeds.jsonl
examples/04_hts_hit_finding/: README.md  main.py
src/torch_distributed_ensemble/: __init__.py  functional.py
src/torch_distributed_ensemble/lightning/: __init__.py  callbacks.py  strategy.py
tests/: _workers_lightning_cpu.py  _workers_lightning_gpu.py  conftest.py  test_functional.py  test_inference.py  test_lightning_callbacks.py  test_lightning_strategy.py
