[project]
name = "torch-distributed-ensemble"
version = "0.1.0"
description = "Train independent deep ensemble members using PyTorch's distributed primitives"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Laurits Fredsgaard"}]
license = {text = "MIT"}
dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.0",
]

[project.optional-dependencies]
lightning = ["lightning>=2.5.1"]

[project.urls]
Repository = "https://github.com/lauritsf/torch-distributed-ensemble"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "rdkit>=2025.9.6",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
    "ty>=0.0.20",
]

[tool.pytest.ini_options]
addopts = "-m 'not gpu and not multigpu'"
markers = [
    "gpu: requires at least 1 CUDA GPU",
    "multigpu: requires 2+ CUDA GPUs",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",             # pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "N",             # pep8-naming
    "D",             # pydocstyle (google convention)
    "C4",            # flake8-comprehensions
    "PIE",           # flake8-pie
    "ISC",           # implicit-str-concat
    "RET",           # flake8-return
    "G",             # flake8-logging-format
    "PT",            # flake8-pytest-style
]
ignore = [
    "D100",          # missing docstring in public module
    "D104",          # missing docstring in public package
    "D107",          # missing docstring in __init__
    "D203",          # no-blank-line-before-class (conflicts with D211)
    "D213",          # multi-line-summary-second-line (conflicts with D212)
    "N812",          # lowercase imported as non-lowercase (import lightning as L, functional as F)
    "SIM108",        # ternary operator -- often less readable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"examples/**" = ["D", "N803", "N806"]
"src/**/callbacks.py" = ["D102"]  # Lightning hook overrides
"src/**/strategy.py" = ["D102"]   # Lightning hook overrides

[tool.ruff.lint.isort]
known-first-party = ["torch_distributed_ensemble"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
